Add DMB32 and DHB32 data
info/boards.info: Add DHB32/DMB32 data from the Networks and Comms 1989-01 but include some info from other docs.

info/refs.info: Add date/URL to some references.

scripts/boards-tags.yaml: Distinguish between SYNC/ASYNCH and Printer ports.

--- a/scripts/boards-tags.yaml
+++ b/scripts/boards-tags.yaml
@@ -201,3 +201,13 @@
   - Number of synchronous interface ports
   - all
   - all
+- Asynch-ports:
+  - Aynch ports
+  - Number of asynchronous interface ports
+  - all
+  - all
+- Printer-ports:
+  - Printer ports
+  - Number of printer ports
+  - all
+  - all
