Ad DHT32, DST32, DHU11, DMF32, DMR11 interfaces
info/boards.info: Add the data ...

info/refs.info: ... and the references ...

scripts/boards-tags.yaml: ... and allow a tag for UNIBUS' "-15V".

--- a/scripts/boards-tags.yaml
+++ b/scripts/boards-tags.yaml
@@ -186,6 +186,11 @@
   - -12V current
   - all
   - all
+- Positive-15V-current:
+  - +15V current
+  - +15V current
+  - all
+  - all
 - Negative-15V-current:
   - -15V current
   - -15V current
