--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -18,6 +18,7 @@
   - all
   - summary
   - required
+  - - date
 - Generation:
   - Technology generation
   - Technology generation
@@ -28,26 +29,36 @@
   - First revenue ship date
   - all
   - summary
+  - optional
+  - - date
 - FCS-date:
   - FCS date
   - First customer ship date
   - all
   - summary
+  - optional
+  - - date
 - Last-order:
   - Last order date
   - Last order date
   - all
   - summary
+  - optional
+  - - date
 - Last-ship:
   - Last ship date
   - Last ship date
   - all
   - summary
+  - optional
+  - - date
 - EOSL:
   - End of service life
   - End of service life
   - all
   - summary
+  - optional
+  - - date
 - Codename:
   - Codename
   - Codename
