--- a/scripts/boards-tags.yaml
+++ b/scripts/boards-tags.yaml
@@ -19,6 +19,7 @@
   - all
   - summary
   - required
+  - - date
 - Generation:
   - Technology generation
   - Technology generation
@@ -29,26 +30,36 @@
   - First revenue ship date
   - all
   - summary
+  - optional
+  - - date
 - FCS-date:
   - FCS date
   - First customer ship date
   - all
   - summary
+  - optional
+  - - date
 - Last-order:
   - Last order date
   - Last order date
   - all
   - summary
+  - optional
+  - - date
 - Last-ship:
   - Last ship date
   - Last ship date
   - all
   - summary
+  - optional
+  - - date
 - EOSL:
   - End of service life
   - End of service life
   - all
   - summary
+  - optional
+  - - date
 - Codename:
   - Codename
   - Codename
