--- a/scripts/monitors-tags.yaml
+++ b/scripts/monitors-tags.yaml
@@ -19,41 +19,56 @@
   - all
   - summary
   - required
+  - - date
 - Location:
   - Used to specify HTML file location
   - Used to specify HTML file location
   - storage
   - summary
+  - optional
+  - - date
 - FRS-date:
   - FRS date
   - First revenue ship date
   - all
   - summary
+  - optional
+  - - date
 - FCS-date:
   - FCS date
   - First customer ship date
   - all
   - summary
+  - optional
+  - - date
 - Last-order:
   - Last order date
   - Last order date
   - all
   - summary
+  - optional
+  - - date
 - Last-ship:
   - Last ship date
   - Last ship date
   - all
   - summary
+  - optional
+  - - date
 - EOSL:
   - End of service life
   - End of service life
   - all
   - summary
+  - optional
+  - - date
 - EOL:
   - End of life
   - End of life
   - all
   - summary
+  - optional
+  - - date
 - Codename:
   - Codename
   - Codename
