Add DR250 and InfoServer 150
scripts/comms-tags.yaml: Add BUS-SCSI (as the InfoServer 150 has two).

info/comms.info: Add DECrouter 250 and InfoServer 150 information.

info/refs.info: Add a reference for the InfoServer 150.

--- a/scripts/comms-tags.yaml
+++ b/scripts/comms-tags.yaml
@@ -135,6 +135,13 @@
   - Range of System V versions that suppor this system
   - vax
   - summary
+- BUS-SCSI:
+  - BUS SCSI
+  - SCSI bus details
+  - all
+  - io
+  - optional
+  - - bus-spec
 - Slots:
   - Number of slots
   - Number of slots
