Add DSF32, DSW4x and DHW4x sync/asynch boards
info/boards.info: Add the DSF32, DSW41, DSW42, DHW41 and DHW42.

scripts/boards-tags.yaml: Add a VMS-Driver field, as the Buyer's Guide happens to quote that for the DSW4x boards.

--- a/scripts/boards-tags.yaml
+++ b/scripts/boards-tags.yaml
@@ -251,5 +251,10 @@
   - Serial interface speed, min to max
   - all
   - all
+- VMS-Driver:
+  - VMS driver
+  - Name of driver under OpenVMS
+  - all
+  - all
 
   
