printers.info: Verfiy last unverified references
info/printers.info: Verify some data against the LA34 technical manual. Add som LJ250/LJ252 data.

info/refs.info: Note that the DECdirect May-July 1991 really has been processed. Add a reference for the LA34 technical manual.

scripts/printers-tags.yaml: Remove dimensions and power items; add CPU (since the LA34 has an 8085 and that should be recorded somewhere).

--- a/scripts/printers-tags.yaml
+++ b/scripts/printers-tags.yaml
@@ -152,41 +152,6 @@
   - Print-speed
   - all
   - summary
-- Height:
-  - Height
-  - Height
-  - all
-  - summary
-- Width:
-  - Width
-  - Width
-  - all
-  - summary
-- Depth:
-  - Depth
-  - Depth
-  - all
-  - summary
-- Weight:
-  - Weight
-  - Weight
-  - all
-  - summary
-- Supply:
-  - Supply
-  - Supply
-  - all
-  - summary
-- I-max:
-  - I-max
-  - I-max
-  - all
-  - summary
-- Power:
-  - Power
-  - Power
-  - all
-  - summary
 - Emulation:
   - Emulation
   - Emulation
@@ -342,3 +307,8 @@
   - Page-description-language
   - all
   - summary
+- CPU:
+  - CPU
+  - The main board CPU
+  - all
+  - all
