Add info for RouteAbout Access EW
info/comms.info: Add the RouteAbout Access EW data.

info/refs.info: One new reference required.

scripts/comms-tags.yaml: Part-number is now required.

scripts/power-tags.yaml: The standalone PSU specifies a current (of 0) for the +15V supply.

--- a/scripts/comms-tags.yaml
+++ b/scripts/comms-tags.yaml
@@ -130,6 +130,11 @@
   - Range of System V versions that suppor this system
   - vax
   - summary
+- Part-number:
+  - Part number
+  - Part number
+  - all
+  - summary
 - BUS-SCSI:
   - BUS SCSI
   - SCSI bus details
